--- a/src/View/post/form.twig
+++ b/src/View/post/form.twig
@@ -19,6 +19,19 @@
         </div>
 
         <div class="form-group">
+            <label for="authorId">Autor:</label>
+            <select id="authorId" name="authorId" class="form-control">
+                <option value="">Selecione um autor</option>
+                {% for author in authors %}
+                    <option value="{{ author.id }}"
+                            {% if post.authorId is defined and post.authorId == author.id %}selected{% endif %}>
+                        {{ author.nome }}
+                    </option>
+                {% endfor %}
+            </select>
+        </div>
+
+        <div class="form-group">
             <label for="categoryId">Categoria:</label>
             <select id="categoryId" name="categoryId" class="form-control">
                 <option value="">Selecione uma categoria</option>
@@ -32,9 +45,9 @@
         </div>
 
         <div class="form-group">
-            <label for="userId">Autor:</label>
+            <label for="userId">Usuário:</label>
             <select id="userId" name="userId" required class="form-control">
-                <option value="">Selecione um autor</option>
+                <option value="">Selecione um Usuário</option>
                 {% for user in users %}
                     <option value="{{ user.id }}"
                             {% if post.userId is defined and post.userId == user.id %}selected{% endif %}>
