--- a/src/View/author/list.twig
+++ b/src/View/author/list.twig
@@ -3,15 +3,25 @@
 {% block content %}
 <h1>Autores</h1>
 
-<a href="/author/create" class="btn btn-primary">Novo Autor</a>
-
 {% if authors is empty %}
     <p>Nenhum autor encontrado.</p>
 {% else %}
-    <ul>
+    <ul class="list-group">
         {% for author in authors %}
-            <li>{{ author.nome }} - {{ author.email }}</li>
+            <li class="list-group-item d-flex justify-content-between align-items-center">
+                <div>
+                    <a href="/author/{{ author.id }}">{{ author.nome }}</a> - {{ author.email }}
+                </div>
+                <div>
+                    <a href="/author/{{ author.id }}/delete" class="btn btn-danger btn-sm"
+                       onclick="return confirm('Tem certeza que deseja deletar este autor?');">
+                        Deletar
+                    </a>
+                </div>
+            </li>
         {% endfor %}
     </ul>
 {% endif %}
+
+<a href="/author/create" class="btn btn-primary mt-3">Criar Novo Autor</a>
 {% endblock %}
